Fix spacing for headers on products.html

--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -205,6 +205,7 @@ img {
     .left-items h3 {
         text-align: center;
         width: 60%;
+        top: -45px;
         left: 50%;
         transform: translateX(-50%);
     }
@@ -212,6 +213,7 @@ img {
     .right-items h3 {
         text-align: center;
         width: 60%;
+        top: -45px;
         left: 50%;
         transform: translateX(-50%);
     }
